Fix mobile header logo alignment

--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -23,9 +23,10 @@ footer .skin-wmau-footer-left {
 	justify-content: center;
 }
 
-header .skin-wmau-container h1#sitename .skin-wmau-image-logo-horizontal {
+header .skin-wmau-container h1#sitename {
 	width: 100%;
-	background-position: center center;
+	text-align: center;
+	padding-top: 6px;
 }
 
 ul.skin-wmau-list-horizontal {
